desacoplar menu apps button

--- a/templates/navbar.mustache
+++ b/templates/navbar.mustache
@@ -70,199 +70,7 @@
         </ul>
 
         <div id="navbar-menu-apps">
-            <div id="menu-apps-btn">
-                <button type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <svg id="Menú_Apps" data-name="Menú Apps" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
-                        <rect id="Rectángulo_2" data-name="Rectángulo 2" width="6" height="6" fill="#262626"/>
-                        <rect id="Rectángulo_1447" data-name="Rectángulo 1447" width="6" height="6" transform="translate(0 10)" fill="#262626"/>
-                        <rect id="Rectángulo_1450" data-name="Rectángulo 1450" width="6" height="6" transform="translate(0 20)" fill="#262626"/>
-                        <rect id="Rectángulo_1440" data-name="Rectángulo 1440" width="6" height="6" transform="translate(10)" fill="#262626"/>
-                        <rect id="Rectángulo_1446" data-name="Rectángulo 1446" width="6" height="6" transform="translate(10 10)" fill="#262626"/>
-                        <rect id="Rectángulo_1449" data-name="Rectángulo 1449" width="6" height="6" transform="translate(10 20)" fill="#262626"/>
-                        <rect id="Rectángulo_1441" data-name="Rectángulo 1441" width="6" height="6" transform="translate(20)" fill="#262626"/>
-                        <rect id="Rectángulo_1445" data-name="Rectángulo 1445" width="6" height="6" transform="translate(20 10)" fill="#262626"/>
-                        <rect id="Rectángulo_1448" data-name="Rectángulo 1448" width="6" height="6" transform="translate(20 20)" fill="#262626"/>
-                    </svg>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" >
-                    <ul id="app-apps" class="apps">
-                        <li class="app cloud">
-                            <a href="https://nextcloud.escola3.digitaldemocratic.net/" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-cloud" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_cloud, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app email">
-                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/mail/setup" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_email, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app pad">
-                            <a href="https://pad.escola3.digitaldemocratic.net/" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-file-text-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_pads, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app create-files">
-                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/files" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-file-word-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_create_file, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app forms">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-check-square-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_form_forms, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app feedbacks">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_form_feedback, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app chats">
-                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/spreed" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-commenting-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_chat, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app meet-bbb">
-                            <a href="https://bbb.digitaldemocratic.net/" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-video-camera" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_meets_bbb, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app blogs">
-                            <a href="https://wp.escola3.digitaldemocratic.net/" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-rss" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_blogs, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app schedule">
-                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/calendar" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_schedule, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app photos">
-                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/photos" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-file-image-o" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_photos, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app maps">
-                            <a href="https://nextcloud.escola3.digitaldemocratic.net/apps/maps" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_maps, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                    <ul id="app-external" class="external-links">
-                        <li class="app youtube">
-                            <a href="https://youtube.com/" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_youtube, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app dict">
-                            <a href="https://www.wordreference.com/" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-book" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_dict, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app meet-jitsi">
-                            <a href="http://meet.jit.si/" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-video-camera" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_meets_jitsi, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                        <li class="app search">
-                            <a href="#" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">
-                                    {{# str }} app_menu_search, theme_cbe {{/ str }}
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                    <ul id="app-my-courses" class="mycourses">
-                        {{# user_courses }}
-                        <li class="app">
-                            <a href="{{ view_url }}" class="app-link" target="_blank">
-                                <div class="icon">
-                                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                                </div>
-                                <div class="text">{{ fullname }}</div>
-                            </a>
-                        </li>
-                         {{/ user_courses }}
-                    </ul>
-                </div>
-            </div>
+            {{{ menu_apps_button }}}
         </div>
 
         <ul id="navbar-usernav" class="nav navbar-nav usernav">
