--- a/scss/components/_modtresipuntaudio.scss
+++ b/scss/components/_modtresipuntaudio.scss
@@ -1,4 +1,5 @@
-#page-mod-tresipuntaudio-view[data-theme='cbe'][data-role="user"] {
+#page-mod-tresipuntaudio-view[data-theme='cbe'][data-role="user"],
+#page-theme-cbe-view_board[data-theme='cbe'][data-role="user"] {
   #region-main-box {
     #audiointro {
       margin: 0 20px 0;
@@ -8,7 +9,9 @@
     }
     .resourcecontent {
       margin: 60px;
+      border: 4px solid #929292;
       .mediaplugin {
+        margin: 0;
         > audio.video-js {
           display: none;
         }
@@ -23,7 +26,7 @@
           }
 
           .vjs-control-bar {
-            background-color: rgb(0 0 0 / 41%);
+            background-color: $grey-medium;
             .vjs-volume-menu-button-horizontal {
               &:focus {
               }
@@ -90,7 +93,7 @@
                 .vjs-menu-content {
 
                   .vjs-volume-bar.vjs-slider-horizontal {
-
+                    background-color: rgb(66 66 66 / 50%);
                     .vjs-volume-level {
                     }
                   }
@@ -111,17 +114,18 @@
             }
 
             .vjs-progress-control {
-
               &:hover {
                 .vjs-progress-holder {
+                  background-color: rgb(224 224 224 / 50%);
                 }
               }
 
               .vjs-progress-holder {
-
+                background-color: rgb(224 224 224 / 50%);
                 .vjs-load-progress {
-
+                  background: rgb(80 80 80 / 50%);
                   > div {
+                    background: rgb(93 93 93 / 75%);
                   }
                 }
 
