--- a/scss/components/_modtresipuntvideo.scss
+++ b/scss/components/_modtresipuntvideo.scss
@@ -1,4 +1,5 @@
-#page-mod-tresipuntvideo-view[data-theme='cbe'][data-role="user"] {
+#page-mod-tresipuntvideo-view[data-theme='cbe'][data-role="user"],
+#page-theme-cbe-view_board[data-theme='cbe'][data-role="user"] {
   #region-main-box {
     div[role="main"] {
       padding: 0;
@@ -12,7 +13,9 @@
     }
     .resourcecontent {
       margin: 60px;
+      border: 4px solid #929292;
       .mediaplugin {
+        margin: 0;
         > video.video-js {
           display: none;
         }
@@ -46,7 +49,7 @@
             }
           }
           .vjs-control-bar {
-            background-color: rgb(0 0 0 / 41%);
+            background-color: $grey-medium;
             .vjs-volume-menu-button-horizontal {
               &:focus {
               }
@@ -98,6 +101,7 @@
               .vjs-menu {
                 .vjs-menu-content {
                   .vjs-volume-bar.vjs-slider-horizontal {
+                    background-color: rgb(66 66 66 / 50%);
                     .vjs-volume-level {
                     }
                   }
@@ -115,11 +119,15 @@
             .vjs-progress-control {
               &:hover {
                 .vjs-progress-holder {
+                  background-color: rgb(224 224 224 / 50%);
                 }
               }
               .vjs-progress-holder {
+                background-color: rgb(224 224 224 / 50%);
                 .vjs-load-progress {
+                  background: rgb(80 80 80 / 50%);
                   > div {
+                    background: rgb(93 93 93 / 75%);
                   }
                 }
                 .vjs-play-progress {
@@ -138,8 +146,6 @@
             }
           }
           .vjs-text-track-display {
-            height: 100%;
-            background: linear-gradient( 0deg, rgba(0,0,0,0.6) 25%, rgba(255,255,255,0) 85%);
           }
           &.vjs-fullscreen {
             .vjs-fullscreen-control::before {
@@ -148,5 +154,11 @@
         }
       }
     }
+  }
+}
+
+#page-theme-cbe-view_board[data-theme='cbe'][data-role="user"] {
+  .resourcecontent {
+    margin: 30px 200px !important;
   }
 }
