--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -268,5 +268,31 @@ body[data-theme='cbe'][data-role="user"] {
 
   }
 
+  .module_media {
+    .media-content {
+      display: none;
+    }
+    .expand-media {
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 37px;
+      right: 0;
+      button {
+        border: none;
+        background-color: inherit;
+        color: #b7b7b7;
+        &[data-action="contract"] {
+          display: none;
+          position: relative;
+          top: 37px;
+        }
+        &:hover {
+          color: $primary-color;
+        }
+      }
+    }
+  }
+
 }
 
