--- a/templates/module_board_component.mustache
+++ b/templates/module_board_component.mustache
@@ -28,14 +28,14 @@
                     <i class="fa fa-chevron-up" aria-hidden="true"></i>
                 </button>
             </div>
-            <div class="media-content">
+            <div class="media-content" data-media="{{ id }}">
                 <h3>{{{ media }}}</h3>
             </div>
         </div>
     {{/ is_media }}
 </div>
 {{#js}}
-    require(['jquery'], function($) {
-        $('[data-toggle="tooltip"]').tooltip()
+    require(['theme_cbe/viewmedia'], function(viewmedia) {
+        viewmedia.initViewMedia('[data-region="media"]');
     });
 {{/js}}
