fix error comments

--- a/templates/board_page.mustache
+++ b/templates/board_page.mustache
@@ -139,5 +139,11 @@
         publication.initPublication('[data-region="create-ready"]', {{ courseid }});
     });
     {{/ is_teacher }}
+    require(['theme_cbe/comments'], function(comments) {
+        comments.initComments('[data-region="board-content"]');
+    });
+    require(['theme_cbe/viewmedia'], function(viewmedia) {
+        viewmedia.initViewMedia('[data-region="media"]');
+    });
 {{/js}}
 
