fix long mod name

--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -88,8 +88,7 @@ body[data-theme='cbe'][data-role="user"] {
         }
       }
       .text {
-        margin-left: 15px;
-        margin-top: 25px;
+        margin: 25px 70px 20px 15px;
         .name {
           font-family: $fontbold;
           font-size: 18px;
