--- a/scss/components/_modtresipuntaudio.scss
+++ b/scss/components/_modtresipuntaudio.scss
@@ -1,155 +1,162 @@
-#page-mod-tresipuntaudio-view[data-theme='cbe'][data-role="user"],
-#page-theme-cbe-view_board[data-theme='cbe'][data-role="user"] {
-  #region-main-box {
-    #audiointro {
-      margin: 0 20px 0;
-      p.audiodetails {
+#page-mod-tresipuntaudio-view[data-theme='cbe'][data-role="user"] #region-main-box,
+#page-theme-cbe-view_board[data-theme='cbe'][data-role="user"] #region-main-box .modulecbe.tresipuntaudio,
+#page-course-view-topics[data-theme='cbe'][data-role="user"] .activity.tresipuntaudio  {
+
+  #audiointro {
+    margin: 0 20px 0;
+    p.audiodetails {
+      display: none;
+    }
+  }
+  .resourcecontent {
+    margin: 60px;
+    border: 4px solid #929292;
+    .mediaplugin {
+      margin: 0;
+      > audio.video-js {
         display: none;
       }
-    }
-    .resourcecontent {
-      margin: 60px;
-      border: 4px solid #929292;
-      .mediaplugin {
-        margin: 0;
-        > audio.video-js {
-          display: none;
+
+      > div {
+        max-width: 100% !important;
+      }
+
+      .video-js {
+
+        .vjs-big-play-button {
         }
 
-        > div {
-          max-width: 100% !important;
-        }
-
-        .video-js {
-
-          .vjs-big-play-button {
+        .vjs-control-bar {
+          background-color: $grey-medium;
+          .vjs-volume-menu-button-horizontal {
+            &:focus {
+            }
           }
 
-          .vjs-control-bar {
-            background-color: $grey-medium;
-            .vjs-volume-menu-button-horizontal {
-              &:focus {
-              }
-            }
+          .vjs-play-control {
 
-            .vjs-play-control {
-
-              &:hover {
-                &::before {
-                }
-              }
-
+            &:hover {
               &::before {
               }
-
-              &.vjs-button::before {
-              }
-
-              &.vjs-playing::before {
-              }
-
-              &.vjs-paused::before {
-              }
             }
 
-            .vjs-volume-menu-button {
-
-              &:hover {
-                &:before {
-                }
-              }
-
-              &.vjs-vol-0 {
-
-                &::before {
-                }
-              }
-
-              &.vjs-vol-1 {
-                &::before {
-                }
-              }
-
-              &.vjs-vol-2 {
-                &::before {
-                }
-              }
-
-              &.vjs-vol-3 {
-                &::before {
-                }
-              }
-
-              &:hover {
-                .vjs-menu-content {
-                }
-              }
-
-              &::before {
-              }
-
-              .vjs-menu {
-
-                .vjs-menu-content {
-
-                  .vjs-volume-bar.vjs-slider-horizontal {
-                    background-color: rgb(66 66 66 / 50%);
-                    .vjs-volume-level {
-                    }
-                  }
-                }
-              }
+            &::before {
             }
 
-            .vjs-remaining-time-display {
+            &.vjs-button::before {
             }
 
-            .vjs-current-time {
+            &.vjs-playing::before {
             }
 
-            .vjs-time-divider {
+            &.vjs-paused::before {
             }
+          }
 
-            .vjs-duration {
-            }
+          .vjs-volume-menu-button {
 
-            .vjs-progress-control {
-              &:hover {
-                .vjs-progress-holder {
-                  background-color: rgb(224 224 224 / 50%);
-                }
-              }
-
-              .vjs-progress-holder {
-                background-color: rgb(224 224 224 / 50%);
-                .vjs-load-progress {
-                  background: rgb(80 80 80 / 50%);
-                  > div {
-                    background: rgb(93 93 93 / 75%);
-                  }
-                }
-
-                .vjs-play-progress {
-                  background-color: $primary-color;
-
-                  &:before {
-                  }
-                }
-              }
-
-            }
-
-            .vjs-fullscreen-control {
-
-              &:hover {
-              }
-
+            &:hover {
               &:before {
               }
             }
+
+            &.vjs-vol-0 {
+
+              &::before {
+              }
+            }
+
+            &.vjs-vol-1 {
+              &::before {
+              }
+            }
+
+            &.vjs-vol-2 {
+              &::before {
+              }
+            }
+
+            &.vjs-vol-3 {
+              &::before {
+              }
+            }
+
+            &:hover {
+              .vjs-menu-content {
+              }
+            }
+
+            &::before {
+            }
+
+            .vjs-menu {
+
+              .vjs-menu-content {
+
+                .vjs-volume-bar.vjs-slider-horizontal {
+                  background-color: rgb(66 66 66 / 50%);
+                  .vjs-volume-level {
+                  }
+                }
+              }
+            }
+          }
+
+          .vjs-remaining-time-display {
+          }
+
+          .vjs-current-time {
+          }
+
+          .vjs-time-divider {
+          }
+
+          .vjs-duration {
+          }
+
+          .vjs-progress-control {
+            &:hover {
+              .vjs-progress-holder {
+                background-color: rgb(224 224 224 / 50%);
+              }
+            }
+
+            .vjs-progress-holder {
+              background-color: rgb(224 224 224 / 50%);
+              .vjs-load-progress {
+                background: rgb(80 80 80 / 50%);
+                > div {
+                  background: rgb(93 93 93 / 75%);
+                }
+              }
+
+              .vjs-play-progress {
+                background-color: $primary-color;
+
+                &:before {
+                }
+              }
+            }
+
+          }
+
+          .vjs-fullscreen-control {
+
+            &:hover {
+            }
+
+            &:before {
+            }
           }
         }
       }
     }
+  }
+
+}
+
+#page-course-view-topics[data-theme='cbe'][data-role="user"] .activity.tresipuntaudio {
+  .resourcecontent {
+    margin: 0 60px 22px !important;
   }
 }
