--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -86,6 +86,19 @@ body[data-theme='cbe'][data-role="user"] {
           height: 62px;
           border-radius: 31px;
         }
+        .online {
+          height: 14px;
+          width: 14px;
+          border-radius: 7px;
+          background-color: darkgrey;
+          border: 2px solid white;
+          position: absolute;
+          right: 2px;
+          bottom: 1px;
+          &.connected {
+            background-color: #0f9a0f;
+          }
+        }
       }
       .text {
         margin: 25px 70px 20px 15px;
@@ -167,12 +180,29 @@ body[data-theme='cbe'][data-role="user"] {
           li.comment {
             display: flex;
             margin-bottom: 10px;
-            .picture-current {
+            .picture {
+              height: 38px;
+              width: 38px;
+              border-radius: 19px;
               margin: 0 5px 0 0;
+              position: relative;
               img {
                 width: 40px;
                 height: 40px;
                 border-radius: 20px;
+              }
+              .online {
+                height: 12px;
+                width: 12px;
+                border-radius: 7px;
+                background-color: darkgrey;
+                border: 2px solid white;
+                position: absolute;
+                right: -2px;
+                bottom: -4px;
+                &.connected {
+                  background-color: #0f9a0f;
+                }
               }
             }
             .bocata {
