--- a/scss/pages/_themes.scss
+++ b/scss/pages/_themes.scss
@@ -33,6 +33,15 @@ body[data-theme='cbe'][data-role='user'] {
         padding: 15px 10px;
       }
     }
+    li.activity {
+      margin: 0 0 12px;
+      .contentafterlink {
+        margin: 10px 15px 0;
+        padding: 30px;
+        border: 1px solid $border-color;
+        background-color: #fbfbfb;
+      }
+    }
     .single-section {
       background-color: #fff;
       margin: 0 0 15px;
@@ -119,7 +128,8 @@ body[data-theme='cbe'][data-role='user'] {
         }
         .instancename {
           color: $black-ligth;
-          font-size: 16px;
+          font-size: 18px;
+          font-family: $fontbold;
           &:hover {
             color: $primary-color;
             text-decoration: none;
