--- a/templates/moreinfo_page.mustache
+++ b/templates/moreinfo_page.mustache
@@ -25,7 +25,18 @@
 }}
 <div data-region="moreinfo">
     <main class="contain">
-        <h3 class="title">{{# str }} course_menu_moreinfo, theme_cbe {{/ str }}</h3>
+        <div class="container-title">
+            <h3 class="title">
+                {{# str }} course_menu_moreinfo, theme_cbe {{/ str }}
+                {{# is_teacher }}
+                    <button type="button" class="btn-tooltip edit-section-zero" data-toggle="tooltip" data-placement="bottom" title="{{# str }} edit_section_zero, theme_cbe {{/ str }}">
+                        <a class="link" href="{{ href_edit_section_zero }}">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                        </a>
+                    </button>
+                {{/ is_teacher }}
+            </h3>
+        </div>
         <p class="summary">{{{ summary }}}</p>
         <div class="modules">
             {{# mods }}
