--- a/templates/publication_board_component.mustache
+++ b/templates/publication_board_component.mustache
@@ -13,7 +13,7 @@
     {{# is_teacher }}
         {{# is_mine }}
         <button data-toggle="modal" data-target=".bd-deletemodule-modal-lg-{{ id }}" class="edit-module action">
-            <i class="fa fa-trash" aria-hidden="true"></i>
+            <i class="fa fa-trash-o" aria-hidden="true"></i>
         </button>
         {{/ is_mine }}
     {{/ is_teacher }}
