--- a/scss/pages/_themes.scss
+++ b/scss/pages/_themes.scss
@@ -38,8 +38,8 @@ body[data-theme='cbe'][data-role='user'] {
       .contentafterlink {
         margin: 10px 15px 0;
         padding: 30px;
-        border: 1px solid $border-color;
-        background-color: #fbfbfb;
+        border: 1px solid #f3f3f3;
+        background-color: #f9f9f9;
       }
     }
     .single-section {
